# pyresults

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE.md  Justfile  LICENSE  README.md  REFACTORING_SUMMARY.md  example_usage.py  pyproject.toml  requirements.txt
.github/: .copilot-instructions.md  copilot-instructions.md
.github/instructions/: python.instructions.md
.github/skills/fix-precommit/: SKILL.md
.github/skills/github-actions-lookup/: README.md  SKILL.md
.github/skills/github-actions-lookup/scripts/: github-actions-lookup.js  utils.js
.github/skills/run-playwright-tests/: SKILL.md
.github/skills/test-coverage-analysis/: SKILL.md
.github/workflows/: ci.yml  release.yml
pyresults/: CONFIG.py  __init__.py  __main__.py  create_excel.py  create_pdf.py  data_gathering.py  logging_config.py  race_result.py  results.py  results_processor.py  round.py  utils.py
pyresults/config/: __init__.py  category_config.py  competition_config.py
pyresults/domain/: __init__.py  athlete.py  category.py  race_result.py  round.py  score.py  team.py
pyresults/output/: __init__.py  excel_output_generator.py  html_output_generator.py  interfaces.py  pdf_output_generator.py  round_results_excel_generator.py  score_data_provider.py
pyresults/repositories/: __init__.py  csv_race_result_repository.py  csv_score_repository.py  csv_team_result_repository.py  in_memory_repositories.py  interfaces.py
pyresults/round/: __init__.py
pyresults/services/: __init__.py  individual_score_service.py  race_processor_service.py  team_score_service.py  team_scoring_service.py
pyresults/twentyfour_twentyfive/: __main__.py
tests/: test_coverage_gaps.py  test_html_output_generator.py  test_individual_scores.py  test_input_data_processing.py  test_output_parity.py  test_partial_rounds.py  test_team_scoring.py
