[project]
name = "pyresults"
description = "Running standings calculations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fpdf==1.7.2",
    "pandas==2.2.3",
    "openpyxl==3.1.2"
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pyfakefs>=5.7.4",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
    "pre-commit>=3.0.0",
]

#uv doesn't yet have a support to add dev scripts, so we use hatch for this to run uv run commands
#running it through hatch directly is a bit more complicated as that requires all dependencies to be configured for hatch
[tool.hatch.envs.default.scripts]
test = "uv run python -m pytest tests/"
test-ci = "uv run python -m pytest tests/ --cov=. --cov-report=xml --junitxml=./test_results.xml"
lint = "uv run ruff check ."
format = "uv run ruff format ."
build = "uv build --wheel"
pre-commit = "uv run pre-commit run --all-files"


[tool.hatch.build]
packages = ["pyresults"]

[tool.hatch.version]
path = "pyresults/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["pyresults"]
ignore = [".old"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
extraPaths = ["pyresults"]

[tool.coverage.run]
omit = ["pyresults"]
