[project]
name = "pyresults"
description = "Running standings calculations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fpdf==1.7.2",
    "pandas==2.2.3",
    "openpyxl==3.1.2",
    "numpy>=1.26.0,<2.0",
    "python-dateutil==2.8.2"
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pyfakefs>=5.7.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
    "pre-commit>=3.0.0",
    "ty>=0.0.14",
]

#uv doesn't yet have a support to add dev scripts, so we use hatch for this to run uv run commands
#running it through hatch directly is a bit more complicated as that requires all dependencies to be configured for hatch
[tool.hatch.envs.default.scripts]
test = "uv run python -m pytest tests/"
test-ci = "uv run python -m pytest tests/ --cov=. --cov-report=xml --junitxml=./test_results.xml"
lint = "uv run ruff check ."
format = "uv run ruff format ."
build = "uv build --wheel"
pre-commit = "uv run pre-commit run --all-files"


[tool.hatch.build]
packages = ["pyresults"]

[tool.hatch.version]
path = "pyresults/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["pyresults"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.analysis]
allowed-unresolved-imports = []
