[project]
name = "pyresults"
description = "Running standings calculations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
output = [
    "fpdf==1.7.2",
    "pandas==2.2.3",
    "openpyxl==3.1.2",
    "numpy>=1.26.0,<2.0",
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pyfakefs>=5.7.4",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
    "pre-commit>=3.0.0",
    "ty>=0.0.14",
    # Output extras needed for CSV repositories used in tests
    "fpdf==1.7.2",
    "pandas==2.2.3",
    "openpyxl==3.1.2",
    "numpy>=1.26.0,<2.0",
    # Security scanning tools
    "pip-audit>=2.7.0",
    "pip-licenses>=4.3",
    "bandit>=1.7.0",
    "semgrep>=1.0.0",
]

#uv doesn't yet have a support to add dev scripts, so we use hatch for this to run uv run commands
#running it through hatch directly is a bit more complicated as that requires all dependencies to be configured for hatch
[tool.hatch.envs.default.scripts]
test = "uv run python -m pytest tests/"
test-ci = "uv run python -m pytest tests/ --cov=. --cov-report=xml --junitxml=./test_results.xml"
lint = "uv run ruff check ."
format = "uv run ruff format ."
build = "uv build --wheel"
pre-commit = "uv run pre-commit run --all-files"


[tool.hatch.build]
packages = ["pyresults"]

[tool.hatch.version]
path = "pyresults/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["pyresults"]
omit = ["pyresults/__about__.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = ".venv"

[tool.ty.analysis]
allowed-unresolved-imports = []

[tool.uv]
constraint-dependencies = [
    # Minimum safe versions resolving pip-audit CVEs in transitive dependencies.
    # Bump these when new CVEs are found; never lower them.
    "cryptography>=46.0.6",  # GHSA-r6ph-v2qm-q3c2, GHSA-m959-cc7f-wv43
    "filelock>=3.20.3",      # GHSA-w853-jp5j-5j7f, GHSA-qmgc-5h2g-mvrw
    "h11>=0.16.0",           # GHSA-vqfr-h8mv-ghfj
    "jaraco-context>=6.1.0", # GHSA-58pv-8j8x-9vj2
    "pygments>=2.20.0",      # GHSA-5239-wwwm-4pmq
    "uv>=0.11.6",            # GHSA-8qf3-x8v5-2pj8, GHSA-w476-p2h3-79g9, GHSA-pqhf-p39g-3x64, GHSA-pjjw-68hj-v9mw (transitive via hatch)
    "virtualenv>=20.36.1",   # GHSA-597g-3phw-6986
]
